modificaciones de tamaño a la imagen

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Prueba</title>
 </head>
 <body>
-    <h1>FESTIVAL</h1>
+    <h1>FESTIVAL DE MUSICA TRIBAL HOUSE</h1>
     <hr>
     <marquee>14 de Noviembre del 2021</marquee>
     <hr>
-    <img src="festival.jpg" alt="foto del festival">
+    <center>
+        <img src="festival.jpg" alt="foto del festival" width="70%">
+    </center>
 </body>
 </html>
