cambio de tamaño y centrado de texto

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>Prueba</title>
 </head>
 <body>
-    <h1>FESTIVAL DE MUSICA TRIBAL HOUSE</h1>
+    <center>
+     <h1>FESTIVAL DE MUSICA TRIBAL HOUSE</h1>
+    </center>
     <hr>
     <marquee>14 de Noviembre del 2021</marquee>
     <hr>
     <center>
-        <img src="festival.jpg" alt="foto del festival" width="70%">
+        <img src="festival.jpg" alt="foto del festival" width="100">
     </center>
 </body>
 </html>
