cambio en la imagen

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <marquee>14 de Noviembre del 2021</marquee>
     <hr>
     <center>
-        <img src="festival.jpg" alt="foto del festival" width="100">
+        <img src="festival.jpg" alt="foto del festival">
     </center>
 </body>
 </html>
